--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
   "scripts": {
     "build": "babel src --out-dir dist",
     "prepublish": "npm run build",
-    "test": "mocha --compilers js:babel-register --require babel-regenerator-runtime --recursive \"src/**/*.spec.js\""
+    "test": "mocha --compilers js:babel-register --require babel-polyfill --recursive \"src/**/*.spec.js\""
+  },
+  "dependencies": {
+    "babel-polyfill": "^6.8.0",
+    "commander": "^2.9.0",
+    "debug": "^2.2.0",
+    "forever": "^0.15.1",
+    "mz": "^2.4.0"
   },
   "devDependencies": {
     "babel-cli": "^6.8.0",
@@ -22,9 +29,5 @@
     "eslint": "^2.9.0",
     "mocha": "^2.4.5",
     "sinon": "^1.17.4"
-  },
-  "dependencies": {
-    "commander": "^2.9.0",
-    "nodemon": "^1.9.2"
   }
 }
