--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.8.0",
+    "cliff": "^0.1.10",
     "commander": "^2.9.0",
     "debug": "^2.2.0",
     "forever": "^0.15.1",
-    "mz": "^2.4.0"
+    "mz": "^2.4.0",
+    "timespan": "^2.3.0"
   },
   "devDependencies": {
     "babel-cli": "^6.8.0",
