--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   "license": "MIT",
   "scripts": {
     "build": "babel src --out-dir dist",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "watch": "nodemon --ignore dist --exec \"npm run build\" src"
   },
   "dependencies": {
     "babel-polyfill": "^6.8.0",
     "cliff": "^0.1.10",
     "commander": "^2.9.0",
     "debug": "^2.2.0",
+    "docker-names": "^1.0.0",
     "forever": "^0.15.1",
     "mz": "^2.4.0",
     "pad-left": "^2.1.0",
@@ -32,6 +34,7 @@
     "chai": "^3.5.0",
     "eslint": "^2.9.0",
     "mocha": "^2.4.5",
+    "nodemon": "^1.9.2",
     "sinon": "^1.17.4"
   }
 }
