--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clusty",
-  "version": "0.3.1",
+  "version": "0.4.0",
   "description": "Command line tools for working with a microservice cluster",
   "bin": {
     "clusty": "bin/clusty.js"
@@ -31,10 +31,10 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.8.0",
-    "chai": "^3.5.0",
     "eslint": "^2.9.0",
-    "mocha": "^2.4.5",
-    "nodemon": "^1.9.2",
-    "sinon": "^1.17.4"
+    "nodemon": "^1.9.2"
+  },
+  "babel": {
+    "presets": ["es2015", "stage-0"]
   }
 }
