--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mz": "^2.4.0",
     "pad-left": "^2.1.0",
     "pidusage": "^1.0.1",
+    "ps-tree": "^1.1.0",
     "timespan": "^2.3.0"
   },
   "devDependencies": {
@@ -35,6 +36,9 @@
     "nodemon": "^1.9.2"
   },
   "babel": {
-    "presets": ["es2015", "stage-0"]
+    "presets": [
+      "es2015",
+      "stage-0"
+    ]
   }
 }
